--- a/snapshot/changelog.html
+++ b/snapshot/changelog.html
@@ -90,12 +90,20 @@
 <p>Total number of changed sets: 1</p>
 <div class="section">
 <h3><a name="Changes_between_2016-09-13_and_2017-09-14"></a>Changes between 2016-09-13 and 2017-09-14</h3>
-<p>Total commits: 3<br />Total number of files changed: 26</p>
+<p>Total commits: 5<br />Total number of files changed: 26</p>
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>Timestamp</th>
 <th>Author</th>
 <th>Details</th></tr>
+<tr class="b">
+<td>2017-09-13 22:29:21</td>
+<td><a href="team-list.html#Jonas Rutishauser &lt;jonas.rutishauser@alumni.ethz.ch&gt;">Jonas Rutishauser</a></td>
+<td><a class="externalLink" href="https://github.com/jonasrutishauser/bpmn-maven-plugin/blob/2d1803a25ba763ac755e6d19e2e1599609124093/.travis.yml"><b>.travis.yml</b></a> <a class="externalLink" href="https://github.com/jonasrutishauser/bpmn-maven-plugin/commit/2d1803a25ba763ac755e6d19e2e1599609124093">v 2d1803a25ba763ac755e6d19e2e1599609124093</a><br /><br />fix site deployment</td></tr>
+<tr class="a">
+<td>2017-09-13 22:26:43</td>
+<td><a href="team-list.html#Jonas Rutishauser &lt;jonas.rutishauser@alumni.ethz.ch&gt;">Jonas Rutishauser</a></td>
+<td><a class="externalLink" href="https://github.com/jonasrutishauser/bpmn-maven-plugin/blob/a10af629e3b9196766c309130fcb7d05345e52c7/.travis.yml"><b>.travis.yml</b></a> <a class="externalLink" href="https://github.com/jonasrutishauser/bpmn-maven-plugin/commit/a10af629e3b9196766c309130fcb7d05345e52c7">v a10af629e3b9196766c309130fcb7d05345e52c7</a><br /><br />fix codecov integration</td></tr>
 <tr class="b">
 <td>2017-09-13 22:07:37</td>
 <td><a href="team-list.html#Jonas Rutishauser &lt;jonas.rutishauser@alumni.ethz.ch&gt;">Jonas Rutishauser</a></td>
