--- a/snapshot/surefire-report.html
+++ b/snapshot/surefire-report.html
@@ -116,12 +116,12 @@ function toggleDisplay(elementId) {
 <th>Success Rate</th>
 <th>Time</th></tr>
 <tr class="b">
-<td>19</td>
+<td>31</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>2.29</td></tr></table><br />
+<td>1.823</td></tr></table><br />
 <p>Note: failures are anticipated and checked for with assertions while errors are unanticipated.</p><br /></div>
 <div class="section">
 <h2><a name="Package_List"></a>Package List</h2><a name="Package_List"></a>
@@ -137,12 +137,12 @@ function toggleDisplay(elementId) {
 <th>Time</th></tr>
 <tr class="b">
 <td><a href="#ch.pmr.plugin">ch.pmr.plugin</a></td>
-<td>19</td>
+<td>31</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>2.29</td></tr></table><br />
+<td>1.823</td></tr></table><br />
 <p>Note: package statistics are not computed recursively, they only sum up all of its testsuites numbers.</p>
 <div class="section">
 <h3><a name="ch.pmr.plugin"></a>ch.pmr.plugin</h3><a name="ch.pmr.plugin"></a>
@@ -159,12 +159,12 @@ function toggleDisplay(elementId) {
 <tr class="b">
 <td><a href="#ch.pmr.pluginModelsReportRendererTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
 <td><a href="#ch.pmr.pluginModelsReportRendererTest">ModelsReportRendererTest</a></td>
-<td>3</td>
+<td>15</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>0.269</td></tr>
+<td>0.256</td></tr>
 <tr class="a">
 <td><a href="#ch.pmr.pluginReportConfigurationTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
 <td><a href="#ch.pmr.pluginReportConfigurationTest">ReportConfigurationTest</a></td>
@@ -173,7 +173,7 @@ function toggleDisplay(elementId) {
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>0.005</td></tr>
+<td>0.004</td></tr>
 <tr class="b">
 <td><a href="#ch.pmr.pluginReportMojoTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
 <td><a href="#ch.pmr.pluginReportMojoTest">ReportMojoTest</a></td>
@@ -182,7 +182,7 @@ function toggleDisplay(elementId) {
 <td>0</td>
 <td>0</td>
 <td>100%</td>
-<td>2.016</td></tr></table></div><br /></div>
+<td>1.563</td></tr></table></div><br /></div>
 <div class="section">
 <h2><a name="Test_Cases"></a>Test Cases</h2><a name="Test_Cases"></a>
 <p>[<a href="#Summary">Summary</a>] [<a href="#Package_List">Package List</a>] [<a href="#Test_Cases">Test Cases</a>]</p>
@@ -191,16 +191,64 @@ function toggleDisplay(elementId) {
 <table border="1" class="table table-striped">
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_ch.pmr.plugin.ModelsReportRendererTest.getCaseName_aCmmn_processName"></a>getCaseName_aCmmn_processName</td>
+<td>0.054</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_ch.pmr.plugin.ModelsReportRendererTest.getScripts_renderABpmn_bpmnScripts"></a>getScripts_renderABpmn_bpmnScripts</td>
+<td>0.068</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_ch.pmr.plugin.ModelsReportRendererTest.render_aDmn"></a>render_aDmn</td>
-<td>0.183</td></tr>
+<td>0.007</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_ch.pmr.plugin.ModelsReportRendererTest.getDecisionName_aDmn_firstDecisionName"></a>getDecisionName_aDmn_firstDecisionName</td>
+<td>0.001</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_ch.pmr.plugin.ModelsReportRendererTest.getCaseName_invalid_null"></a>getCaseName_invalid_null</td>
+<td>0.022</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_ch.pmr.plugin.ModelsReportRendererTest.getScripts_renderADmn_dmnScripts"></a>getScripts_renderADmn_dmnScripts</td>
+<td>0</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_ch.pmr.plugin.ModelsReportRendererTest.getProcessName_invalid_null"></a>getProcessName_invalid_null</td>
+<td>0.013</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_ch.pmr.plugin.ModelsReportRendererTest.getProcessName_aBpmn_processName"></a>getProcessName_aBpmn_processName</td>
+<td>0</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_ch.pmr.plugin.ModelsReportRendererTest.getDecisionName_aBpmn_null"></a>getDecisionName_aBpmn_null</td>
+<td>0.014</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_ch.pmr.plugin.ModelsReportRendererTest.getDecisionName_invalid_null"></a>getDecisionName_invalid_null</td>
+<td>0.011</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_ch.pmr.plugin.ModelsReportRendererTest.getScripts_renderACmmn_cmmnScripts"></a>getScripts_renderACmmn_cmmnScripts</td>
+<td>0</td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_ch.pmr.plugin.ModelsReportRendererTest.render_aBpmn"></a>render_aBpmn</td>
-<td>0.006</td></tr>
+<td>0</td></tr>
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_ch.pmr.plugin.ModelsReportRendererTest.render_aCmmn"></a>render_aCmmn</td>
-<td>0.005</td></tr></table></div>
+<td>0.001</td></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_ch.pmr.plugin.ModelsReportRendererTest.getCaseNameName_aDmn_null"></a>getCaseNameName_aDmn_null</td>
+<td>0</td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><a name="TC_ch.pmr.plugin.ModelsReportRendererTest.getProcessName_aDmn_null"></a>getProcessName_aDmn_null</td>
+<td>0</td></tr></table></div>
 <div class="section">
 <h3><a name="ReportConfigurationTest"></a>ReportConfigurationTest</h3><a name="ch.pmr.pluginReportConfigurationTest"></a>
 <table border="1" class="table table-striped">
@@ -219,7 +267,7 @@ function toggleDisplay(elementId) {
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_ch.pmr.plugin.ReportConfigurationTest.canGenerateReport_aBpmn_true"></a>canGenerateReport_aBpmn_true</td>
-<td>0.001</td></tr>
+<td>0</td></tr>
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_ch.pmr.plugin.ReportConfigurationTest.canGenerateReport_noModels_false"></a>canGenerateReport_noModels_false</td>
@@ -230,39 +278,39 @@ function toggleDisplay(elementId) {
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_ch.pmr.plugin.ReportMojoTest.getModels_nonExistingDirectory_nothing"></a>getModels_nonExistingDirectory_nothing</td>
-<td>0.035</td></tr>
+<td>0.033</td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_ch.pmr.plugin.ReportMojoTest.executeReport_callsRenderer"></a>executeReport_callsRenderer</td>
-<td>1.139</td></tr>
+<td>0.882</td></tr>
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_ch.pmr.plugin.ReportMojoTest.executeReport_copiesOwnScript"></a>executeReport_copiesOwnScript</td>
-<td>0.01</td></tr>
+<td>0.007</td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_ch.pmr.plugin.ReportMojoTest.getModels_emptyDirectory_nothing"></a>getModels_emptyDirectory_nothing</td>
-<td>0.004</td></tr>
+<td>0.003</td></tr>
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_ch.pmr.plugin.ReportMojoTest.executeReport_copiesScriptFromDependency"></a>executeReport_copiesScriptFromDependency</td>
-<td>0.006</td></tr>
+<td>0.004</td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_ch.pmr.plugin.ReportMojoTest.getModels_matchingFileInSubdirectory_matchingFile"></a>getModels_matchingFileInSubdirectory_matchingFile</td>
-<td>0.005</td></tr>
+<td>0.004</td></tr>
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_ch.pmr.plugin.ReportMojoTest.getModels_directoryWithMultipleMatchingFile_allFiles"></a>getModels_directoryWithMultipleMatchingFile_allFiles</td>
-<td>0.002</td></tr>
+<td>0.001</td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_ch.pmr.plugin.ReportMojoTest.executeReport_copiesModels"></a>executeReport_copiesModels</td>
-<td>0.013</td></tr>
+<td>0.009</td></tr>
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_ch.pmr.plugin.ReportMojoTest.canGenerateReport_configurationError_false"></a>canGenerateReport_configurationError_false</td>
-<td>0.786</td></tr>
+<td>0.605</td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td><a name="TC_ch.pmr.plugin.ReportMojoTest.getModels_directoryWithMatchingFile_matchingFile"></a>getModels_directoryWithMatchingFile_matchingFile</td>
