Building site for bpmn-maven-plugin (1.0.0-SNAPSHOT)

--- a/snapshot/xref-test/overview-summary.html
+++ b/snapshot/xref-test/overview-summary.html
@@ -35,12 +35,12 @@
         	<tbody>
     	    	            	<tr>
               		<td>
-                		<a href="ch/pmr/plugin/package-summary.html">ch.pmr.plugin</a>
+                		<a href="ch/pmr/plugin/junit/extension/package-summary.html">ch.pmr.plugin.junit.extension</a>
               		</td>
             	</tr>
 	          	            	<tr>
               		<td>
-                		<a href="ch/pmr/plugin/junit/extension/package-summary.html">ch.pmr.plugin.junit.extension</a>
+                		<a href="com/github/jonasrutishauser/plugin/bpmn/package-summary.html">com.github.jonasrutishauser.plugin.bpmn</a>
               		</td>
             	</tr>
 	          	        	</tbody>
