--- a/snapshot/xref/overview-frame.html
+++ b/snapshot/xref/overview-frame.html
@@ -16,7 +16,7 @@
 
 		<ul>
 						<li>
-				<a href="ch/pmr/plugin/package-frame.html" target="packageFrame">ch.pmr.plugin</a>
+				<a href="com/github/jonasrutishauser/plugin/bpmn/package-frame.html" target="packageFrame">com.github.jonasrutishauser.plugin.bpmn</a>
 			</li>
 					</ul>
 
