--- a/snapshot/xref-test/overview-frame.html
+++ b/snapshot/xref-test/overview-frame.html
@@ -16,10 +16,10 @@
 
 		<ul>
 						<li>
-				<a href="ch/pmr/plugin/package-frame.html" target="packageFrame">ch.pmr.plugin</a>
+				<a href="ch/pmr/plugin/junit/extension/package-frame.html" target="packageFrame">ch.pmr.plugin.junit.extension</a>
 			</li>
 						<li>
-				<a href="ch/pmr/plugin/junit/extension/package-frame.html" target="packageFrame">ch.pmr.plugin.junit.extension</a>
+				<a href="com/github/jonasrutishauser/plugin/bpmn/package-frame.html" target="packageFrame">com.github.jonasrutishauser.plugin.bpmn</a>
 			</li>
 					</ul>
 
