--- a/snapshot/xref/overview-summary.html
+++ b/snapshot/xref/overview-summary.html
@@ -35,7 +35,7 @@
         	<tbody>
     	    	            	<tr>
               		<td>
-                		<a href="com/github/jonasrutishauser/plugin/bpmn/package-summary.html">com.github.jonasrutishauser.plugin.bpmn</a>
+                		<a href="com/github/jonasrutishauser/maven/plugin/bpmn/package-summary.html">com.github.jonasrutishauser.maven.plugin.bpmn</a>
               		</td>
             	</tr>
 	          	        	</tbody>
