--- a/snapshot/jacoco-it/com.github.jonasrutishauser.maven.plugin.bpmn/ReportConfiguration.java.html
+++ b/snapshot/jacoco-it/com.github.jonasrutishauser.maven.plugin.bpmn/ReportConfiguration.java.html
@@ -33,56 +33,56 @@ public class ReportConfiguration
     private final List&lt;File&gt; cmmns;
 
     public ReportConfiguration( File basedir, List&lt;File&gt; bpmns, List&lt;File&gt; dmns, List&lt;File&gt; cmmns )
-<span class="nc" id="L36">    {</span>
-<span class="nc" id="L37">        this.basedir = basedir;</span>
-<span class="nc" id="L38">        this.bpmns = bpmns;</span>
-<span class="nc" id="L39">        this.dmns = dmns;</span>
-<span class="nc" id="L40">        this.cmmns = cmmns;</span>
-<span class="nc" id="L41">    }</span>
+<span class="fc" id="L36">    {</span>
+<span class="fc" id="L37">        this.basedir = basedir;</span>
+<span class="fc" id="L38">        this.bpmns = bpmns;</span>
+<span class="fc" id="L39">        this.dmns = dmns;</span>
+<span class="fc" id="L40">        this.cmmns = cmmns;</span>
+<span class="fc" id="L41">    }</span>
 
     public boolean canGenerateReport()
     {
-<span class="nc bnc" id="L45" title="All 6 branches missed.">        return hasBpmn() || hasDmn() || hasCmmn();</span>
+<span class="pc bpc" id="L45" title="5 of 6 branches missed.">        return hasBpmn() || hasDmn() || hasCmmn();</span>
     }
 
     public boolean hasBpmn()
     {
-<span class="nc bnc" id="L50" title="All 2 branches missed.">        return !bpmns.isEmpty();</span>
+<span class="pc bpc" id="L50" title="1 of 2 branches missed.">        return !bpmns.isEmpty();</span>
     }
 
     public boolean hasDmn()
     {
-<span class="nc bnc" id="L55" title="All 2 branches missed.">        return !dmns.isEmpty();</span>
+<span class="pc bpc" id="L55" title="1 of 2 branches missed.">        return !dmns.isEmpty();</span>
     }
 
     public boolean hasCmmn()
     {
-<span class="nc bnc" id="L60" title="All 2 branches missed.">        return !cmmns.isEmpty();</span>
+<span class="pc bpc" id="L60" title="1 of 2 branches missed.">        return !cmmns.isEmpty();</span>
     }
 
     public File getBasedir()
     {
-<span class="nc" id="L65">        return basedir;</span>
+<span class="fc" id="L65">        return basedir;</span>
     }
 
     public List&lt;File&gt; getBpmns()
     {
-<span class="nc" id="L70">        return bpmns;</span>
+<span class="fc" id="L70">        return bpmns;</span>
     }
 
     public List&lt;File&gt; getDmns()
     {
-<span class="nc" id="L75">        return dmns;</span>
+<span class="fc" id="L75">        return dmns;</span>
     }
 
     public List&lt;File&gt; getCmmns()
     {
-<span class="nc" id="L80">        return cmmns;</span>
+<span class="fc" id="L80">        return cmmns;</span>
     }
 
     public Stream&lt;File&gt; getModels()
     {
-<span class="nc" id="L85">        return Stream.concat( bpmns.stream(), Stream.concat( dmns.stream(), cmmns.stream() ) );</span>
+<span class="fc" id="L85">        return Stream.concat( bpmns.stream(), Stream.concat( dmns.stream(), cmmns.stream() ) );</span>
     }
 
 }
