--- a/snapshot/jacoco-it/com.github.jonasrutishauser.maven.plugin.bpmn/ReportMojo.java.html
+++ b/snapshot/jacoco-it/com.github.jonasrutishauser.maven.plugin.bpmn/ReportMojo.java.html
@@ -54,13 +54,13 @@ public class ReportMojo
 
     public ReportMojo()
     {
-<span class="nc" id="L57">        this( new File( &quot;src&quot; ) );</span>
-<span class="nc" id="L58">    }</span>
+<span class="fc" id="L57">        this( new File( &quot;src&quot; ) );</span>
+<span class="fc" id="L58">    }</span>
 
     protected ReportMojo( File srcFolder )
-<span class="nc" id="L61">    {</span>
-<span class="nc" id="L62">        this.srcFolder = srcFolder;</span>
-<span class="nc" id="L63">    }</span>
+<span class="fc" id="L61">    {</span>
+<span class="fc" id="L62">        this.srcFolder = srcFolder;</span>
+<span class="fc" id="L63">    }</span>
 
     protected ReportMojo( ReportConfiguration configuration )
 <span class="nc" id="L66">    {</span>
@@ -69,17 +69,17 @@ public class ReportMojo
 
     public String getName( Locale locale )
     {
-<span class="nc" id="L72">        return &quot;Business Process Models&quot;;</span>
+<span class="fc" id="L72">        return &quot;Business Process Models&quot;;</span>
     }
 
     public String getDescription( Locale locale )
     {
-<span class="nc" id="L77">        return &quot;Shows the projects BPMN, DMN and CMMN models.&quot;;</span>
+<span class="fc" id="L77">        return &quot;Shows the projects BPMN, DMN and CMMN models.&quot;;</span>
     }
 
     public String getOutputName()
     {
-<span class="nc" id="L82">        return &quot;business-process-models&quot;;</span>
+<span class="fc" id="L82">        return &quot;business-process-models&quot;;</span>
     }
 
     @Override
@@ -87,7 +87,7 @@ public class ReportMojo
     {
         try
         {
-<span class="nc" id="L90">            return getConfiguration().canGenerateReport();</span>
+<span class="fc" id="L90">            return getConfiguration().canGenerateReport();</span>
         }
 <span class="nc" id="L92">        catch ( MavenReportException e )</span>
         {
@@ -99,102 +99,102 @@ public class ReportMojo
     private ReportConfiguration getConfiguration()
         throws MavenReportException
     {
-<span class="nc bnc" id="L102" title="All 2 branches missed.">        if ( configuration == null )</span>
+<span class="fc bfc" id="L102" title="All 2 branches covered.">        if ( configuration == null )</span>
         {
-<span class="nc" id="L104">            configuration = new ReportConfiguration( getProject().getBasedir(), getModels( &quot;bpmn&quot; ), getModels( &quot;dmn&quot; ),</span>
-<span class="nc" id="L105">                                                     getModels( &quot;cmmn&quot; ) );</span>
+<span class="fc" id="L104">            configuration = new ReportConfiguration( getProject().getBasedir(), getModels( &quot;bpmn&quot; ), getModels( &quot;dmn&quot; ),</span>
+<span class="fc" id="L105">                                                     getModels( &quot;cmmn&quot; ) );</span>
         }
-<span class="nc" id="L107">        return configuration;</span>
+<span class="fc" id="L107">        return configuration;</span>
     }
 
     @Override
     protected void executeReport( Locale locale )
         throws MavenReportException
     {
-<span class="nc" id="L114">        final ModelsReportRenderer renderer = createRenderer();</span>
-<span class="nc" id="L115">        renderer.render();</span>
-<span class="nc" id="L116">        copyModels( renderer );</span>
-<span class="nc" id="L117">        copyScripts( renderer );</span>
-<span class="nc" id="L118">    }</span>
+<span class="fc" id="L114">        final ModelsReportRenderer renderer = createRenderer();</span>
+<span class="fc" id="L115">        renderer.render();</span>
+<span class="fc" id="L116">        copyModels( renderer );</span>
+<span class="fc" id="L117">        copyScripts( renderer );</span>
+<span class="fc" id="L118">    }</span>
 
     protected ModelsReportRenderer createRenderer()
         throws MavenReportException
     {
-<span class="nc" id="L123">        return new ModelsReportRenderer( getSink(), getConfiguration() );</span>
+<span class="fc" id="L123">        return new ModelsReportRenderer( getSink(), getConfiguration() );</span>
     }
 
     private void copyScripts( ModelsReportRenderer renderer )
         throws MavenReportException
     {
-<span class="nc bnc" id="L129" title="All 2 branches missed.">        for ( String script : renderer.getScripts() )</span>
+<span class="fc bfc" id="L129" title="All 2 branches covered.">        for ( String script : renderer.getScripts() )</span>
         {
-<span class="nc" id="L131">            URL source = getClass().getResource( script.substring( script.lastIndexOf( '/' ) + 1 ) );</span>
-<span class="nc bnc" id="L132" title="All 2 branches missed.">            if ( source == null )</span>
+<span class="fc" id="L131">            URL source = getClass().getResource( script.substring( script.lastIndexOf( '/' ) + 1 ) );</span>
+<span class="fc bfc" id="L132" title="All 2 branches covered.">            if ( source == null )</span>
             {
-<span class="nc" id="L134">                source = getSourceFromDependency( script );</span>
+<span class="fc" id="L134">                source = getSourceFromDependency( script );</span>
             }
-<span class="nc" id="L136">            try ( InputStream resource = source.openStream() )</span>
+<span class="pc" id="L136">            try ( InputStream resource = source.openStream() )</span>
             {
-<span class="nc" id="L138">                Path target = Paths.get( getOutputDirectory(), script );</span>
-<span class="nc" id="L139">                Files.createDirectories( target.getParent() );</span>
-<span class="nc" id="L140">                Files.copy( resource, target, StandardCopyOption.REPLACE_EXISTING );</span>
-<span class="nc bnc" id="L141" title="All 8 branches missed.">            }</span>
+<span class="fc" id="L138">                Path target = Paths.get( getOutputDirectory(), script );</span>
+<span class="fc" id="L139">                Files.createDirectories( target.getParent() );</span>
+<span class="fc" id="L140">                Files.copy( resource, target, StandardCopyOption.REPLACE_EXISTING );</span>
+<span class="pc bpc" id="L141" title="6 of 8 branches missed.">            }</span>
 <span class="nc" id="L142">            catch ( IOException e )</span>
             {
 <span class="nc" id="L144">                throw new MavenReportException( &quot;failed to copy script '&quot; + script + &quot;' to target&quot;, e );</span>
-<span class="nc" id="L145">            }</span>
-<span class="nc" id="L146">        }</span>
-<span class="nc" id="L147">    }</span>
+<span class="fc" id="L145">            }</span>
+<span class="fc" id="L146">        }</span>
+<span class="fc" id="L147">    }</span>
 
     private URL getSourceFromDependency( String script )
         throws MavenReportException
     {
-<span class="nc" id="L152">        String artifactId = script.substring( 0, script.indexOf( '/' ) );</span>
-<span class="nc" id="L153">        Properties pomProperties = new Properties();</span>
-<span class="nc" id="L154">        try ( InputStream properties =</span>
-<span class="nc" id="L155">            getClass().getResourceAsStream( &quot;/META-INF/maven/org.webjars.bower/&quot; + artifactId + &quot;/pom.properties&quot; ) )</span>
+<span class="fc" id="L152">        String artifactId = script.substring( 0, script.indexOf( '/' ) );</span>
+<span class="fc" id="L153">        Properties pomProperties = new Properties();</span>
+<span class="pc" id="L154">        try ( InputStream properties =</span>
+<span class="fc" id="L155">            getClass().getResourceAsStream( &quot;/META-INF/maven/org.webjars.bower/&quot; + artifactId + &quot;/pom.properties&quot; ) )</span>
         {
-<span class="nc" id="L157">            pomProperties.load( properties );</span>
-<span class="nc bnc" id="L158" title="All 8 branches missed.">        }</span>
+<span class="fc" id="L157">            pomProperties.load( properties );</span>
+<span class="pc bpc" id="L158" title="6 of 8 branches missed.">        }</span>
 <span class="nc" id="L159">        catch ( IOException e )</span>
         {
 <span class="nc" id="L161">            throw new MavenReportException( &quot;failed to determine version of bower script &quot; + artifactId, e );</span>
-<span class="nc" id="L162">        }</span>
-<span class="nc" id="L163">        return getClass().getResource( &quot;/META-INF/resources/webjars/&quot; + artifactId + &quot;/&quot;</span>
-<span class="nc" id="L164">            + pomProperties.getProperty( &quot;version&quot; ) + &quot;/dist/&quot; + script.substring( script.indexOf( '/' ) + 1 ) );</span>
+<span class="fc" id="L162">        }</span>
+<span class="fc" id="L163">        return getClass().getResource( &quot;/META-INF/resources/webjars/&quot; + artifactId + &quot;/&quot;</span>
+<span class="fc" id="L164">            + pomProperties.getProperty( &quot;version&quot; ) + &quot;/dist/&quot; + script.substring( script.indexOf( '/' ) + 1 ) );</span>
     }
 
     private void copyModels( final ModelsReportRenderer renderer )
         throws MavenReportException
     {
-<span class="nc bnc" id="L170" title="All 2 branches missed.">        for ( File model : getConfiguration().getModels().toArray( File[]::new ) )</span>
+<span class="fc bfc" id="L170" title="All 2 branches covered.">        for ( File model : getConfiguration().getModels().toArray( File[]::new ) )</span>
         {
             try
             {
-<span class="nc" id="L174">                Path target = Paths.get( getOutputDirectory(), renderer.getTargetFile( model ) );</span>
-<span class="nc" id="L175">                Files.createDirectories( target.getParent() );</span>
-<span class="nc" id="L176">                Files.copy( model.toPath(), target, StandardCopyOption.REPLACE_EXISTING );</span>
+<span class="fc" id="L174">                Path target = Paths.get( getOutputDirectory(), renderer.getTargetFile( model ) );</span>
+<span class="fc" id="L175">                Files.createDirectories( target.getParent() );</span>
+<span class="fc" id="L176">                Files.copy( model.toPath(), target, StandardCopyOption.REPLACE_EXISTING );</span>
             }
 <span class="nc" id="L178">            catch ( IOException e )</span>
             {
 <span class="nc" id="L180">                throw new MavenReportException( &quot;failed to copy model '&quot; + model + &quot;' to target&quot;, e );</span>
-<span class="nc" id="L181">            }</span>
+<span class="fc" id="L181">            }</span>
         }
-<span class="nc" id="L183">    }</span>
+<span class="fc" id="L183">    }</span>
 
     protected List&lt;File&gt; getModels( String type )
         throws MavenReportException
     {
-<span class="nc bnc" id="L188" title="All 2 branches missed.">        if ( !srcFolder.exists() )</span>
+<span class="pc bpc" id="L188" title="1 of 2 branches missed.">        if ( !srcFolder.exists() )</span>
         {
 <span class="nc" id="L190">            return Collections.emptyList();</span>
         }
-<span class="nc" id="L192">        try ( Stream&lt;Path&gt; stream =</span>
-<span class="nc bnc" id="L193" title="All 2 branches missed.">            Files.find( srcFolder.toPath(), Integer.MAX_VALUE, ( file, attributes ) -&gt; Files.isRegularFile( file )</span>
-<span class="nc bnc" id="L194" title="All 2 branches missed.">                &amp;&amp; file.toString().endsWith( &quot;.&quot; + type ) ) )</span>
+<span class="pc" id="L192">        try ( Stream&lt;Path&gt; stream =</span>
+<span class="fc bfc" id="L193" title="All 2 branches covered.">            Files.find( srcFolder.toPath(), Integer.MAX_VALUE, ( file, attributes ) -&gt; Files.isRegularFile( file )</span>
+<span class="fc bfc" id="L194" title="All 2 branches covered.">                &amp;&amp; file.toString().endsWith( &quot;.&quot; + type ) ) )</span>
         {
-<span class="nc" id="L196">            return stream.map( Path::toFile ).collect( Collectors.toList() );</span>
-<span class="nc bnc" id="L197" title="All 8 branches missed.">        }</span>
+<span class="fc" id="L196">            return stream.map( Path::toFile ).collect( Collectors.toList() );</span>
+<span class="pc bpc" id="L197" title="6 of 8 branches missed.">        }</span>
 <span class="nc" id="L198">        catch ( IOException e )</span>
         {
 <span class="nc" id="L200">            throw new MavenReportException( &quot;could not find &quot; + type + &quot; files&quot;, e );</span>
