update versions and switch to github actions

--- a/src/test/resources/com/github/jonasrutishauser/maven/plugin/bpmn/bpmn.html
+++ b/src/test/resources/com/github/jonasrutishauser/maven/plugin/bpmn/bpmn.html
@@ -18,7 +18,7 @@
 	<div class="section">
 		<h3><a name="BPMN"></a>BPMN</h3>
 		<a name="BPMN"></a>
-		<script src="bpmn-js/bpmn-viewer.min.js" type="text/javascript"></script>
+		<script src="bpmn-js/bpmn-viewer.production.min.js" type="text/javascript"></script>
 		<script src="bpmn-js/bpmn.js" type="text/javascript"></script>
 		<div class="section">
 			<h4><a name="diagram.bpmn"></a>diagram.bpmn</h4>
