--- a/src/test/resources/com/github/jonasrutishauser/maven/plugin/bpmn/cmmn.html
+++ b/src/test/resources/com/github/jonasrutishauser/maven/plugin/bpmn/cmmn.html
@@ -18,7 +18,7 @@
 	<div class="section">
 		<h3><a name="CMMN"></a>CMMN</h3>
 		<a name="CMMN"></a>
-		<script src="cmmn-js/cmmn-viewer.min.js" type="text/javascript"></script>
+		<script src="cmmn-js/cmmn-viewer.production.min.js" type="text/javascript"></script>
 		<script src="cmmn-js/cmmn.js" type="text/javascript"></script>
 		<div class="section">
 			<h4><a name="diagram.cmmn"></a>diagram.cmmn</h4>
