--- a/src/test/resources/com/github/jonasrutishauser/maven/plugin/bpmn/dmn.html
+++ b/src/test/resources/com/github/jonasrutishauser/maven/plugin/bpmn/dmn.html
@@ -1,6 +1,10 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="dmn-js/css/dmn-js.css" />
+		<link rel="stylesheet" href="dmn-js/assets/dmn-js-drd.css" />
+		<link rel="stylesheet" href="dmn-js/assets/dmn-js-decision-table.css" />
+		<link rel="stylesheet" href="dmn-js/assets/dmn-js-literal-expression.css" />
+		<link rel="stylesheet" href="dmn-js/assets/dmn-js-shared.css" />
+		<link rel="stylesheet" href="dmn-js/assets/dmn-font/css/dmn.css" />
 	</head>
 	<body>
 		<div class="section">
@@ -23,7 +27,7 @@
 			<div class="section">
 				<h3><a name="DMN"></a>DMN</h3>
 				<a name="DMN"></a>
-				<script src="dmn-js/dmn-viewer.min.js" type="text/javascript"></script>
+				<script src="dmn-js/dmn-viewer.production.min.js" type="text/javascript"></script>
 				<script src="dmn-js/dmn.js" type="text/javascript"></script>
 				<div class="section">
 					<h4><a name="table.dmn"></a>table.dmn</h4>
